<resources>
    <string name="app_name">KoelPlayer</string>
    <string name="loading">Loading…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Music Notification -->
    <string name="notification_channel_name">Now Playing</string>

    <!-- MainActivity.kt -->
    <string name="playlist">プレイリスト</string>
    <string name="album">アルバム</string>
    <string name="search">検索</string>
    <string name="settings">設定</string>

    <!-- activity_server_settings.xml -->
    <string name="server_host">Server Host</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="done">Done</string>

    <!-- ServerSettingsActivity.kt -->
    <string name="error_get_token">ユーザー認証エラー</string>

    <!-- SyncMusicData.kt -->
    <string name="error_get_all_music_data">楽曲情報取得エラー</string>

    <!-- item_album.xml -->
    <!-- item_playlist.xml -->
    <!-- item_playlist_song.xml -->
    <!-- activity_song_list.xml -->
    <!-- bottom_sheet_now_playing.xml -->
    <!-- item_queue_song.xml -->
    <string name="description_album_cover">アルバムアートワーク</string>

    <!-- item_album_song.xml -->
    <!-- item_playlist_song.xml -->
    <string name="description_more_button">その他</string>

    <!-- activity_song_list.xml -->
    <string name="play">再生</string>
    <string name="shuffle">シャッフル</string>

    <!-- song_more_menu.xml -->
    <string name="play_next">次に再生</string>
    <string name="add_queue">キューに追加</string>

    <!-- SongListActivity.kt -->
    <string name="sort">ソート</string>
    <string-array name="sort_items">
        <item>なし</item>
        <item>トラック番号 - アルバム名</item>
    </string-array>

    <!-- BaseMusicAdapter.kt -->
    <string name="add_queue_song">曲をキューに追加しました</string>
    <string name="play_next_song">次にこの曲が再生されます</string>

    <!-- AlbumAdapter.kt -->
    <string name="add_queue_album">アルバムをキューに追加しました</string>
    <string name="play_next_album">次にこのアルバムが再生されます</string>

    <!-- PlaylistAdapter.kt -->
    <string name="add_queue_playlist">プレイリストをキューに追加しました</string>
    <string name="play_next_playlist">次にこのプレイリストが再生されます</string>

    <!-- bottom_sheet.xml -->
    <string name="now_playing">Now Playing</string>
    <string name="description_shuffle_button">シャッフル</string>
    <string name="description_prev_button">前の曲</string>
    <string name="description_play_button">再生・停止</string>
    <string name="description_next_button">次の曲</string>
    <string name="description_repeat_button">リピート</string>
    <string name="queue">Queue</string>

    <!-- MusicDownloadService.kt -->
    <string name="download_notification_channel_name">Download</string>
    <string name="param_download_left">残り %d 曲</string>

    <!-- preferences.xml -->
    <string name="preferences_koel_server">Koel Server</string>
    <string name="preferences_re_auth">再認証する</string>
    <string name="preferences_sync_music_data">楽曲データの再取得</string>
    <string name="preferences_sync_music_data_description">Koelサーバーにすべての楽曲情報を問い合わせます。\nよろしいですか？</string>
    <string name="preferences_download">ダウンロード</string>
    <string name="preferences_all_download">すべての曲をダウンロードする</string>
    <string name="preferences_all_download_description">携帯回線でもWi-Fi回線でもお構いなしにダウンロードします。\nよろしいですか？</string>
    <string name="preferences_remove_all_downloaded">すべてのダウンロードを削除する</string>
    <string name="preferences_remove_all_downloaded_description">すべてのダウンロードを削除します。\nよろしいですか？</string>
    <string name="preferences_downloaded_info">ダウンロード済み情報</string>
    <string name="preferences_downloaded_info_message">%1$d / %2$d 曲\n%3$s</string>
    <string name="preferences_deny_notification_permission">通知の権限が拒否されました。\nダウンロード進捗を確認するためには通知の権限を許可してください。</string>
</resources>
