<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        app:layoutDescription="@xml/motion_song_list"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/songListDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_content_margin"
            app:layout_constraintTop_toBottomOf="@id/songListToolbar">

            <ImageView
                android:id="@+id/songListCover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/description_album_cover"
                app:srcCompat="@drawable/unknown_album" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/song_list_cover_text_margin"
                android:layout_marginLeft="@dimen/song_list_cover_text_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/songListTitle"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/songListArtist"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/song_list_artist_margin" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/songListButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/song_list_buttons_horizontal_margin"
            android:paddingBottom="@dimen/activity_content_margin"
            app:layout_constraintTop_toBottomOf="@id/songListDetails">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/song_list_buttons_distance_margin"
                android:layout_marginRight="@dimen/song_list_buttons_distance_margin"
                android:layout_weight="1"
                android:onClick="clickPlayButton"
                android:text="@string/play" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/song_list_buttons_distance_margin"
                android:layout_marginLeft="@dimen/song_list_buttons_distance_margin"
                android:layout_weight="1"
                android:onClick="clickShuffleButton"
                android:text="@string/shuffle" />
        </LinearLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/songListToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/songListMusicList"
            android:layout_width="match_parent"
            android:layout_height="@dimen/no_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/songListButtons" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

    <include layout="@layout/bottom_sheet" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>